# AbstractLogger

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md
example/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
example/sinks/: loggerqt.cpp  loggerqt.h
lib/: CMakeLists.txt  config.h.in  libraglobal.h  libraglobal.h.in  libraryglobal.h
lib/base/: person.cpp  person.h
lib/logs/: ilogger.h  logcontext.cpp  logcontext.h  logmanager.cpp  logmanager.h
lib/logs_single_file/: abstractlogger.cpp  abstractlogger.h
lib/mock/: person.cpp  person.h
